<resources>
    <string name="app_name">Tip  Calulator</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="good_18">Good (18%)</string>
    <string name="ok_15">OK (15%)</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="you_need_to_improve_services">Need To Improve Services</string>
    <string name="i_will_give_a_thought_of_visiting">Will Give a Thought of Visiting</string>
    <string name="i_will_surely_visit_again">I Will Surely Visit Again</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount</string>
</resources>